Squished bugs in paper deletion and config code

--- a/css/styles.css
+++ b/css/styles.css
@@ -131,6 +131,7 @@ small.muted {
 
 .home-lab {
 	margin-bottom:20px;
+	margin-left:20px;
 	border:1px solid #CCC;
 	-webkit-box-shadow: 0px 0px 5px rgba(50, 50, 50, 0.75);
 	-moz-box-shadow:    0px 0px 5px rgba(50, 50, 50, 0.75);
